complexe/counter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      volumes:
        - name: counter-app
          emptyDir: {}
        - name: redis-secret
          secret:
            secretName: redis-secret
      containers:
        - name: counter-app
          image: vladost/php:7.2-apache-redis
          volumeMounts:
            - name: counter-app
              mountPath: /var/www/html
            - name: redis-secret
              mountPath: /credentials
          livenessProbe:
            httpGet:
              path: /
              port: 80
