complexe/counter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
spec:
  selector:
    app: counter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
