complexe/counter-ingress.yml
èapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /counter
            pathType: Prefix
            backend:
              service:
                name: counter-service
                port:
                  number: 80
